k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-a-b
  annotations:
    kubernetes.io/ingress.class: nginx
    # certmanager.k8s.io/cluster-issuer: letsencrypt
    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/acme-challenge-type: "dns01"
    # certmanager.k8s.io/acme-dns01-provider: "clouddns"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # tls:
  # - hosts:
  #   - "service-b.microsoft.com"
  #   secretName: service-b.microsoft.com
  rules:
    # - host: xxx.com
    - http:
        paths:
        - path: /service-a
          backend:
            serviceName: service-a
            servicePort: 80
        - path: /service-b
          backend:
            serviceName: service-b
            servicePort: 80
