k8s/networkPolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-a
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: service-a
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          app: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-b
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: service-b
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          app: ingress-nginx
